--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <i class="fab fa-github"></i>
             </a>&nbsp;&nbsp;
           <a href="mailto:czm@czming.top" target="_blank">
-                <i class="fab fa-envelope"></i>
+                Email me
             </a>
         </div>
     </div>
